--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<!-- Hello, adventurer! -->
-	<span id="name_label">Ime: <input type="text" placeholder="Janez" id="name"></span>
+	<span id="name_label">Ime: <input type="text" placeholder="Janez Ploj" id="name"></span>
 	<section id="main">
 		<span class="digits" id="one">
 			<input type="hidden" id="one_val" value="FFFFFF">
