added uvodni text

--- a/analysis.html
+++ b/analysis.html
@@ -352,7 +352,7 @@
 		}
 		var data = [];
 		for (var i = 0; i < raw_data.length; i++) {
-			var name = raw_data[i][0]
+			var name = raw_data[i][0];
 			data[name] = [];
 			for (var submission = 0; submission < raw_data[i].length-1; submission++) { // for each submission
 				data[name][submission] = [];
