--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	<!-- Hello, adventurer! -->
+	<p id="uvod">Predstavljajte si stevilo 2..<br>Kaksne barve je, v vasi predstavi?<br>Kaj pa 4? 8? 1?<br><br>Kliknite na stevilko in izberite pripadajoco barvo:</p>
 	<span id="name_label">Ime: <input type="text" placeholder="Janez Ploj" id="name"></span>
 	<section id="main">
 		<span class="digits" id="one">
@@ -64,7 +65,7 @@
 			padding: 0;
 			margin: 16px;
 		}
-		#name_label {
+		#name_label, p {
 			font-size: 16px;
 		}
 		span.digits {
