--- a/analysis.html
+++ b/analysis.html
@@ -334,16 +334,38 @@
 				{"one": "1FBA00","two": "B10091","three": "826800","four": "1C1407","five": "00B5C0","six": "5D5086","seven": "D86D94","eight": "68001C","nine": "575556","zero": "00028B"},
 				{"one": "D800C7","two": "514C52","three": "E03E00","four": "51A8AB","five": "7BF5FF","six": "58A85E","seven": "D9F100","eight": "FF6868","nine": "7D7D7D","zero": "000000"}
 			],
-			//["Lucija",
+			//["Lucija Tekavc",
 			//	{"one": "CBBF00","two": "8B008E","three": "03BA00","four": "E01B00","five": "008EB7","six": "E88B00","seven": "EA2BE3","eight": "32E000","nine": "17006D","zero": "FFFFFF"}
 			//],
-			//["Lara",
+			//["Lara Podgorsek",
 			//	{"one": "0089C4","two": "FFFFFF","three": "F55C00","four": "07D100","five": "F02D00","six": "AA00F3","seven": "9A00EB","eight": "000000","nine": "1300BB","zero": "FFFFFF"}
 			//],
-			//["Ita", {"one": "C21300","two": "007F15","three": "020005","four": "9026B1","five": "E7D927","six": "503800","seven": "001E52","eight": "45DCD3","nine": "690000","zero": "EEB957"}],
-			//["Novoselec", {"one": "000000","two": "D4DB00","three": "004FD9","four": "DE6000","five": "0000D1","six": "7600BA","seven": "D42300","eight": "077000","nine": "C900C3","zero": "FFFFFF"}],
+			//["Ita Plotajs",
+			//	{"one": "C21300","two": "007F15","three": "020005","four": "9026B1","five": "E7D927","six": "503800","seven": "001E52","eight": "45DCD3","nine": "690000","zero": "EEB957"},
+			//],
+			["Matej Novoselec",
+				{"one": "000000","two": "D4DB00","three": "004FD9","four": "DE6000","five": "0000D1","six": "7600BA","seven": "D42300","eight": "077000","nine": "C900C3","zero": "FFFFFF"},
+				{"one": "A5BB00","two": "FBFF00","three": "00960A","four": "00889F","five": "D6A200","six": "C00043","seven": "000000","eight": "FEFEFE","nine": "E43300","zero": "BA0083"}
+			],
+			//["Ulan Valant",
+			//	{"one": "FFFFFF","two": "33E800","three": "D39400","four": "8B4800","five": "003145","six": "009DBB","seven": "786F6E","eight": "D14C00","nine": "000000","zero": "FFFFFF"},
+			//],
+			//["Lotric", {"one": "00D90E","two": "F73100","three": "0083E8","four": "03000A","five": "FF00EE","six": "046E00","seven": "00E3EB","eight": "911D00","nine": "F2DA00","zero": "FFFFFF"}],
+			//["Rakar", {"one": "1D001D","two": "00B6DF","three": "672C00","four": "E7E100","five": "0C0070","six": "00FF2B","seven": "F0EC00","eight": "D90000","nine": "CF0000","zero": "FFFFFF"}],
+			//["Jonas", {"one": "008379","two": "007C18","three": "000A6F","four": "004E39","five": "2B5B00","six": "006184","seven": "00335E","eight": "506500","nine": "008965","zero": "00496D"}],
+			//["Kolčarš", {"one": "00CCD3","two": "E43300","three": "13DC00","four": "E9D200","five": "7A0000","six": "AF009A","seven": "FF8500","eight": "00297C","nine": "006118","zero": "FFFFFF"}],
+			//["Zunti", {"one": "FCCA00","two": "F29900","three": "DE5100","four": "E33D00","five": "F70010","six": "FF00CC","seven": "9000FF","eight": "2A00FA","nine": "00DDFF","zero": "00FF11"}],
+			//["Godesa", {"one": "0600B7","two": "FE9400","three": "081B00","four": "FFF600","five": "FF0000","six": "00B3FF","seven": "228900","eight": "00D4F4","nine": "9300D3","zero": "FFFFFF"}],
+			//["Ana Novak", {"one": "C60023","two": "E9C600","three": "FFFFFF","four": "43005A","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "00403E","nine": "FFFFFF","zero": "FFFFFF"}],
+			//["Luka z", {"one": "750000","two": "000153","three": "FFFFFF","four": "0002C1","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "005311","nine": "FFFFFF","zero": "FFFFFF"}],
+			//["Anja who?", {"one": "FFFFFF","two": "FFFFFF","three": "FFFFFF","four": "FFFFFF","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "1D9C00","nine": "FFFFFF","zero": "FFFFFF"}],
+			//["Eva Lea Bokal", {"one": "FDED00","two": "970057","three": "008BD5","four": "E10000","five": "25E000","six": "08008B","seven": "E79F1B","eight": "007E97","nine": "471300","zero": "F0F0F0"}],
+			//[":four_leaf_clover:", {"one": "00AC35","two": "B41000","three": "12C900","four": "F8FF00","five": "0081C2","six": "7F0052","seven": "00D1B8","eight": "B0000C","nine": "009540","zero": "000000"}],
+			//["Tjasa", {"one": "D9BC00","two": "D400F5","three": "052900","four": "E82E00","five": "403100","six": "AB7D00","seven": "A3CC00","eight": "004E66","nine": "4C0054","zero": "00DED6"}],
+			//["Lana", {"one": "41F500","two": "FFB3B3","three": "00D2D9","four": "C92F00","five": "DCF500","six": "006113","seven": "0000E3","eight": "4F0032","nine": "FA8E00","zero": "FFFFFF"}],
+			//["gal irt", {"one": "0E8D00","two": "4400AE","three": "954200","four": "E40007","five": "D0006F","six": "E500E0","seven": "133A00","eight": "008CDD","nine": "002B82","zero": "998D00"}],
+			//  V, Z
 			//["Lili", {"one": "EDC700","two": "008425","three": "2C00C9","four": "B20079","five": "00B2CB","six": "AF1700","seven": "E500AF","eight": "493900","nine": "120035","zero": "FFFFFF"}],
-			//["Unknown", {"one": "FFFFFF","two": "FCFA00","three": "E600E3","four": "30C600","five": "008AE6","six": "D70043","seven": "48040D","eight": "5F0088","nine": "B48400","zero": "D5D5D5"}],
 		];
 
 		// format raw data
