--- a/analysis.html
+++ b/analysis.html
@@ -343,7 +343,7 @@
 			//["Ita Plotajs",
 			//	{"one": "C21300","two": "007F15","three": "020005","four": "9026B1","five": "E7D927","six": "503800","seven": "001E52","eight": "45DCD3","nine": "690000","zero": "EEB957"},
 			//],
-			["Matej Novoselec",
+			["Matej",
 				{"one": "000000","two": "D4DB00","three": "004FD9","four": "DE6000","five": "0000D1","six": "7600BA","seven": "D42300","eight": "077000","nine": "C900C3","zero": "FFFFFF"},
 				{"one": "A5BB00","two": "FBFF00","three": "00960A","four": "00889F","five": "D6A200","six": "C00043","seven": "000000","eight": "FEFEFE","nine": "E43300","zero": "BA0083"}
 			],
