added masas 3rd submission

--- a/analysis.html
+++ b/analysis.html
@@ -318,7 +318,8 @@
 			],
 			["Masa",
 				{"one": "004E8D","two": "7FC900","three": "F6EE00","four": "D91600","five": "BA0097","six": "70009B","seven": "00EEFF","eight": "002BAF","nine": "0098AC","zero": "00F1F1"},
-				{"one": "0013AB","two": "5BFF00","three": "FFF900","four": "E03C00","five": "FFB9F3","six": "7C31D5","seven": "76CFDA","eight": "002F9B","nine": "5764EB","zero": "DDFCFA"}
+				{"one": "0013AB","two": "5BFF00","three": "FFF900","four": "E03C00","five": "FFB9F3","six": "7C31D5","seven": "76CFDA","eight": "002F9B","nine": "5764EB","zero": "DDFCFA"},
+				{"one": "0016ED","two": "1DED00","three": "FAF600","four": "F52600","five": "FF96E7","six": "5E00D9","seven": "00CDED","eight": "0016EB","nine": "7200FF","zero": "CEF3F5"}
 			],
 			["Domen",
 				{"one": "000000","two": "00095C","three": "4B7000","four": "FA0000","five": "F5ED00","six": "06A600","seven": "E37900","eight": "00591E","nine": "0000D6","zero": "00F0D8"},
