--- a/analysis.html
+++ b/analysis.html
@@ -313,13 +313,15 @@
 
 		raw_data = [
 			["Jess",
-				{"one": "F0C800","two": "94D400","three": "C20061","four": "804726","five": "F70000","six": "00F0C8","seven": "124F00","eight": "0045AD","nine": "8B00A1","zero": "E0E0E0"},
-				{"one": "FFE600","two": "12A800","three": "EF00F7","four": "825A00","five": "E30000","six": "008CE6","seven": "C7E600","eight": "0062F0","nine": "8800FF","zero": "B6FAF7"}
+				{"one": "F0C800","two": "94D400","three": "C20061","four": "804726","five": "F70000","six": "00F0C8","seven": "124F00","eight": "0045AD","nine": "8B00A1","zero": "E0E0E0", "timestamp": "1549756800000"},
+				{"one": "FFE600","two": "12A800","three": "EF00F7","four": "825A00","five": "E30000","six": "008CE6","seven": "C7E600","eight": "0062F0","nine": "8800FF","zero": "B6FAF7", "timestamp": "1572220800000"},
+				{"one": "FAD900","two": "199138","three": "FA7AAB","four": "5E4812","five": "EB2F3B","six": "CA00F5","seven": "0065D1","eight": "00C8D9","nine": "EB9500","zero": "DEFFFB", "timestamp": "1606263194000"}
 			],
 			["Masa",
-				{"one": "004E8D","two": "7FC900","three": "F6EE00","four": "D91600","five": "BA0097","six": "70009B","seven": "00EEFF","eight": "002BAF","nine": "0098AC","zero": "00F1F1"},
-				{"one": "0013AB","two": "5BFF00","three": "FFF900","four": "E03C00","five": "FFB9F3","six": "7C31D5","seven": "76CFDA","eight": "002F9B","nine": "5764EB","zero": "DDFCFA"},
-				{"one": "0016ED","two": "1DED00","three": "FAF600","four": "F52600","five": "FF96E7","six": "5E00D9","seven": "00CDED","eight": "0016EB","nine": "7200FF","zero": "CEF3F5"}
+				{"one": "004E8D","two": "7FC900","three": "F6EE00","four": "D91600","five": "BA0097","six": "70009B","seven": "00EEFF","eight": "002BAF","nine": "0098AC","zero": "00F1F1", "timestamp": "1549756800000"},
+				{"one": "0013AB","two": "5BFF00","three": "FFF900","four": "E03C00","five": "FFB9F3","six": "7C31D5","seven": "76CFDA","eight": "002F9B","nine": "5764EB","zero": "DDFCFA", "timestamp": "1572134400000"},
+				{"one": "0016ED","two": "1DED00","three": "FAF600","four": "F52600","five": "FF96E7","six": "5E00D9","seven": "00CDED","eight": "0016EB","nine": "7200FF","zero": "CEF3F5", "timestamp": "1596067200000"},
+				{"one": "0070BB","two": "30E346","three": "F1EB00","four": "FD2500","five": "EFBADA","six": "6E00D3","seven": "20A2DD","eight": "0046A2","nine": "3B0094","zero": "A7C4CC", "timestamp": "1605744000000"}
 			],
 			["Domen",
 				{"one": "000000","two": "00095C","three": "4B7000","four": "FA0000","five": "F5ED00","six": "06A600","seven": "E37900","eight": "00591E","nine": "0000D6","zero": "00F0D8"},
@@ -351,22 +353,46 @@
 			//["Ulan Valant",
 			//	{"one": "FFFFFF","two": "33E800","three": "D39400","four": "8B4800","five": "003145","six": "009DBB","seven": "786F6E","eight": "D14C00","nine": "000000","zero": "FFFFFF"},
 			//],
-			//["Lotric", {"one": "00D90E","two": "F73100","three": "0083E8","four": "03000A","five": "FF00EE","six": "046E00","seven": "00E3EB","eight": "911D00","nine": "F2DA00","zero": "FFFFFF"}],
+			["Zala", // Zala Lotric
+				{"one": "00D90E","two": "F73100","three": "0083E8","four": "03000A","five": "FF00EE","six": "046E00","seven": "00E3EB","eight": "911D00","nine": "F2DA00","zero": "FFFFFF"},
+				{"one": "FFFF00","two": "FA1100","three": "00ADD9","four": "1900BD","five": "005205","six": "BD00AA","seven": "00F508","eight": "000000","nine": "A37D00","zero": "FFFFFF"}
+			],
 			//["Rakar", {"one": "1D001D","two": "00B6DF","three": "672C00","four": "E7E100","five": "0C0070","six": "00FF2B","seven": "F0EC00","eight": "D90000","nine": "CF0000","zero": "FFFFFF"}],
-			//["Jonas", {"one": "008379","two": "007C18","three": "000A6F","four": "004E39","five": "2B5B00","six": "006184","seven": "00335E","eight": "506500","nine": "008965","zero": "00496D"}],
+			["Jonas",
+				{"one": "008379","two": "007C18","three": "000A6F","four": "004E39","five": "2B5B00","six": "006184","seven": "00335E","eight": "506500","nine": "008965","zero": "00496D"},
+				{"one": "FFFFFF","two": "FFFFFF","three": "2CAD26","four": "FFFFFF","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "FFFFFF","nine": "FFFFFF","zero": "FFFFFF"}
+			],
 			//["Kolčarš", {"one": "00CCD3","two": "E43300","three": "13DC00","four": "E9D200","five": "7A0000","six": "AF009A","seven": "FF8500","eight": "00297C","nine": "006118","zero": "FFFFFF"}],
 			//["Zunti", {"one": "FCCA00","two": "F29900","three": "DE5100","four": "E33D00","five": "F70010","six": "FF00CC","seven": "9000FF","eight": "2A00FA","nine": "00DDFF","zero": "00FF11"}],
 			//["Godesa", {"one": "0600B7","two": "FE9400","three": "081B00","four": "FFF600","five": "FF0000","six": "00B3FF","seven": "228900","eight": "00D4F4","nine": "9300D3","zero": "FFFFFF"}],
-			//["Ana Novak", {"one": "C60023","two": "E9C600","three": "FFFFFF","four": "43005A","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "00403E","nine": "FFFFFF","zero": "FFFFFF"}],
+			["Ana", // Ana Novak
+				{"one": "C60023","two": "E9C600","three": "FFFFFF","four": "43005A","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "00403E","nine": "FFFFFF","zero": "FFFFFF"},
+				{"one": "FFFFFF","two": "FFFFFF","three": "FFFFFF","four": "FFFFFF","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "FFFFFF","nine": "006769","zero": "FFFFFF"}
+			],
 			//["Luka z", {"one": "750000","two": "000153","three": "FFFFFF","four": "0002C1","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "005311","nine": "FFFFFF","zero": "FFFFFF"}],
 			//["Anja who?", {"one": "FFFFFF","two": "FFFFFF","three": "FFFFFF","four": "FFFFFF","five": "FFFFFF","six": "FFFFFF","seven": "FFFFFF","eight": "1D9C00","nine": "FFFFFF","zero": "FFFFFF"}],
 			//["Eva Lea Bokal", {"one": "FDED00","two": "970057","three": "008BD5","four": "E10000","five": "25E000","six": "08008B","seven": "E79F1B","eight": "007E97","nine": "471300","zero": "F0F0F0"}],
 			//[":four_leaf_clover:", {"one": "00AC35","two": "B41000","three": "12C900","four": "F8FF00","five": "0081C2","six": "7F0052","seven": "00D1B8","eight": "B0000C","nine": "009540","zero": "000000"}],
-			//["Tjasa", {"one": "D9BC00","two": "D400F5","three": "052900","four": "E82E00","five": "403100","six": "AB7D00","seven": "A3CC00","eight": "004E66","nine": "4C0054","zero": "00DED6"}],
+			["Tjasa", // Tjasa Kolcars (knows Timo)
+				{"one": "D9BC00","two": "D400F5","three": "052900","four": "E82E00","five": "403100","six": "AB7D00","seven": "A3CC00","eight": "004E66","nine": "4C0054","zero": "00DED6"},
+				{"one": "CFC800","two": "FF0000","three": "2ADF00","four": "000EDA","five": "B50000","six": "00F1E7","seven": "004958","eight": "E700D8","nine": "00004D","zero": "FFFFFF"}
+			],
 			//["Lana", {"one": "41F500","two": "FFB3B3","three": "00D2D9","four": "C92F00","five": "DCF500","six": "006113","seven": "0000E3","eight": "4F0032","nine": "FA8E00","zero": "FFFFFF"}],
-			//["gal irt", {"one": "0E8D00","two": "4400AE","three": "954200","four": "E40007","five": "D0006F","six": "E500E0","seven": "133A00","eight": "008CDD","nine": "002B82","zero": "998D00"}],
+			["Gal", // Gal Irt
+				{"one": "0E8D00","two": "4400AE","three": "954200","four": "E40007","five": "D0006F","six": "E500E0","seven": "133A00","eight": "008CDD","nine": "002B82","zero": "998D00"},
+				{"one": "FF0000","two": "00A6E3","three": "000901","four": "6900F3","five": "00F20B","six": "FFEB00","seven": "8700EA","eight": "BC1900","nine": "12001F","zero": "778700"}
+			],
 			//  V, Z
 			//["Lili", {"one": "EDC700","two": "008425","three": "2C00C9","four": "B20079","five": "00B2CB","six": "AF1700","seven": "E500AF","eight": "493900","nine": "120035","zero": "FFFFFF"}],
+			//["Tinkara", {"one": "000000","two": "FC2A00","three": "060061","four": "FFDD00","five": "004509","six": "F76300","seven": "28F000","eight": "670073","nine": "782800","zero": "FFFFFF"}],
+			//["Levstek", {"one": "5BA300","two": "E09712","three": "00B2C9","four": "0033D1","five": "CC0067","six": "FF0A0A","seven": "6F00B8","eight": "B1C700","nine": "EBDE00","zero": "D99C50"}],
+			["Timotej",
+				{"one": "00B00C","two": "0B00C2","three": "D8DB00","four": "F50006","five": "00E0E8","six": "0D0200","seven": "009168","eight": "A16C00","nine": "08F200","zero": "650066"},
+				{"one": "00E0F2","two": "00F534","three": "F2D600","four": "C92D00","five": "1B00AB","six": "D800D9","seven": "7A5600","eight": "003C57","nine": "E000DD","zero": "0A0500"}
+			],
+			//["Jakob Drusany", {"one": "19FA00","two": "0600FF","three": "FFFA00","four": "A700F7","five": "00F7FF","six": "FF0000","seven": "FF8300","eight": "00ACB3","nine": "007500","zero": "000000"}],
+			//["Mojca", {"one": "FFFFFF","two": "FFF400","three": "00C7F5","four": "E39800","five": "0BEC00","six": "F00000","seven": "0031AA","eight": "000000","nine": "905500","zero": "FFFFFF"}], // Mojca Bozic (of lemon)
+			//["Luka Urbanc", {"one": "FFFFFF","two": "1DC900","three": "730071","four": "B52B00","five": "000FD4","six": "00A309","seven": "E6AB00","eight": "6B0060","nine": "1C0B00","zero": "0027B5"}],
 		];
 
 		// format raw data
@@ -381,6 +407,10 @@
 				data[name][submission] = [];
 				for (var num = 0; num < 10; num++) {
 					data[name][submission][num] = new Colour(raw_data[i][submission+1][int_to_eng(num)]);
+					if (raw_data[i][submission+1]["timestamp"])
+						data[name][submission]["timestamp"] = raw_data[i][submission+1]["timestamp"];
+					else
+						data[name][submission]["timestamp"] = 0;
 				}
 			}
 		}
@@ -396,12 +426,12 @@
 		for (var person in data) {
 			if (person == "Global") continue;
 			data["Global"][i] = data[person]["average"];
+			data["Global"][i]["timestamp"] = "0"; // global should have 0 timestamps, not undefined
 			i++;
 		}
 
 		// get global average
 		data["Global"]["average"] = getAverageColour(data["Global"]);
-
 
 		// calculate deviations from average
 		for (var person in data) {
@@ -469,13 +499,23 @@
 
 		// add data to screen
 		for (person in data) {
+			console.log("printing for "+person)
+			console.log(data[person])
 			var details = document.createElement("details");
 			var summary = document.createElement("summary");
 			summary.appendChild(createSet(data[person]["average"], "<p class='title'>"+person+"</p>"));
 			details.appendChild(summary);
 			for (var submission = 0; submission < data[person].length; submission++) {
+				console.log(data[person][submission])
+				if (data[person][submission]["timestamp"] != "0") {
+					ts = new Date(parseInt(data[person][submission]["timestamp"]));
+					subtitle = ts.getDate()+". "+(ts.getMonth()+1)+". "+ts.getFullYear();
+				}
+				else {
+					subtitle = "Submission "+submission;
+				}
 				details.appendChild(createSet(data[person][submission],
-						"<p class='subtitle'>Submission "+submission+"</p>"));
+						"<p class='subtitle'>"+subtitle+"</p>"));
 			}
 			if (data[person].length > 1) {
 				details.appendChild(createSet(data[person]["variances"]["average"],
